# azure-notifications

./: .gitignore  LICENSE  Procfile  README.md  app.py  pyproject.toml  requirements.txt  setup.cfg
parse/: html.py
src/azure_notifications/: app.py  config.py  event_classes.py  send_email.py  slack.py  smtpd.py  worker.py
src/azure_notifications/parse/: email.py  html.py  parse.py
src/azure_notifications/smtpd/: server.py
tests/: conftest.py
tests/functional/: test_service.py
