[metadata]
name = azure-notifications
version = 0.0.1
description = "Notification server for Azure DevOps -> Slack communication"
author = "Ivan Kremnev"
author_email = iakremnev@mail.ru
url = https://azure-notifications.herokuapp.com
license = MIT

[options]
packages = find:
package_dir =
    =src
install_requires =
    aiohttp
    beautifulsoup4
    lxml
    pandas
    slack-sdk