[metadata]
name = azure-notifications
version = 0.0.1
description = "Notification server for Azure DevOps -> Slack communication"
author = "Ivan Kremnev"
author_email = iakremnev@mail.ru
url = https://azure-notifications.herokuapp.com
license = MIT

[options]
packages = find:
package_dir =
    =src
install_requires =
    aiohttp
    aiosmtpd @ git+https://github.com/aio-libs/aiosmtpd.git@747a7c467d45354d8d1ea72bc9d2fce15e186479
    beautifulsoup4
    lxml
    pandas
    slack-sdk