[metadata]
name = azure-notifications
version = 0.0.1
description = "Notification server for Azure DevOps -> Slack communication"
author = "Ivan Kremnev"
author_email = iakremnev@mail.ru
url = https://azure-notifications.herokuapp.com
license = MIT

[options]
packages = find:
package_dir =
    =src
install_requires =
    aiohttp
    beautifulsoup4
    lxml
    pandas
    slack_bolt
extras_requires =
    black
    flake8
    isort

[flake8]
max-line-length = 88
extend-ignore = E203, W503

[isort]
profile = "black"
multi_line_output = 3